# RobeRT_server

./: .gitignore  CMakeLists.txt  Dockerfile  compile_run.sh  docker-compose.yml  entrypoint.sh  notes.md
include/: egmudpserver.hpp
proto/: .gitignore  egm.proto
src/: main.cpp  tasks.sh
src/server/: CMakeLists.txt  package.xml
src/server/proto/: .gitignore
src/server/src/: main.cpp
